# SRPlayer

./: CMakeLists.txt  README.md  SRPlayer.sln  SRPlayer.vcxproj  SRPlayer.vcxproj.filters  convert.cl
simple_player/: common.hpp  opencl_filter.cpp  opencl_filter.h  opencl_filter_dx11.cpp  simple_player.cpp
